[gd_scene load_steps=22 format=3 uid="uid://dg1vdugkpmqp7"]

[ext_resource type="Script" path="res://Scripts/control.gd" id="1_jv0dw"]
[ext_resource type="Texture2D" uid="uid://fj5g6322njlu" path="res://Large Buttons/New game Button.png" id="1_w7qkp"]
[ext_resource type="Texture2D" uid="uid://g7xdc6bnfapd" path="res://Large Buttons/Continue Button.png" id="2_mwb2m"]
[ext_resource type="Texture2D" uid="uid://bx2l2iu3vq660" path="res://Large Buttons/Quit Button.png" id="3_52jq7"]
[ext_resource type="Texture2D" uid="uid://buw2catkjo6kh" path="res://Large Buttons/Settings Button.png" id="4_x2ijv"]
[ext_resource type="Texture2D" uid="uid://e6d5t4jftg5l" path="res://Large Buttons/save Button.png" id="5_exmpy"]
[ext_resource type="Texture2D" uid="uid://b1ep5cqlandc8" path="res://Large Buttons/Controls Button.png" id="5_q1us1"]
[ext_resource type="Texture2D" uid="uid://c026qyhbux8ck" path="res://Large Buttons/Load Button.png" id="6_gtinb"]
[ext_resource type="Texture2D" uid="uid://qat87xyl5ggb" path="res://Large Buttons/Return Button.png" id="8_5aoil"]
[ext_resource type="AudioStream" uid="uid://d18awmfuurtby" path="res://Assets/Music/Snik Theme.mp3" id="9_lmiue"]
[ext_resource type="PackedScene" uid="uid://bl2gh35wadu" path="res://Scenes/playerforControls.tscn" id="10_enfil"]
[ext_resource type="Texture2D" uid="uid://cmpmgmuwtsqsv" path="res://Large Buttons/Square Buttons/Back Square Button.png" id="11_82hgo"]
[ext_resource type="Texture2D" uid="uid://hg16rtb674tl" path="res://Large Buttons/Square Buttons/Down Square Button.png" id="12_xukwv"]
[ext_resource type="Texture2D" uid="uid://lc0kqc70kydp" path="res://Large Buttons/Square Buttons/Next Square Button.png" id="13_o0sxm"]
[ext_resource type="Texture2D" uid="uid://damau4t4v2ksc" path="res://Large Buttons/Square Buttons/Up Square Button.png" id="14_73u64"]
[ext_resource type="Texture2D" uid="uid://d1ip1bm0ntmjq" path="res://Large Buttons/Square Buttons/E Button.png" id="16_suk3x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d3rrq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_82hgo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_10jfa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_xukwv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rsfdg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_o0sxm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_31by3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_73u64")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_po1rq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_suk3x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ControlUi" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jv0dw")

[node name="Container" type="NinePatchRect" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Container"]
light_mask = 0
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.207843, 0.203922, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -427.0
offset_right = 1462.0
offset_bottom = 1056.0
grow_horizontal = 2
scale = Vector2(0.45, 0.45)

[node name="NewGame" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
icon = ExtResource("1_w7qkp")
flat = true
icon_alignment = 1

[node name="Continue" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("2_mwb2m")
flat = true
icon_alignment = 1

[node name="Options" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_x2ijv")
flat = true
icon_alignment = 1

[node name="Control" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_q1us1")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_52jq7")
flat = true
icon_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Container2" type="NinePatchRect" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Container2"]
light_mask = 0
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.207843, 0.203922, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Container2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -427.0
offset_right = 1471.0
offset_bottom = 1069.0
grow_horizontal = 2
scale = Vector2(0.45, 0.45)

[node name="Continue" type="Button" parent="Container2/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_mwb2m")
flat = true
icon_alignment = 1

[node name="Save" type="Button" parent="Container2/VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_exmpy")
flat = true
clip_text = true
icon_alignment = 1

[node name="Load" type="Button" parent="Container2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "
"
icon = ExtResource("6_gtinb")
flat = true
icon_alignment = 1

[node name="Options" type="Button" parent="Container2/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_x2ijv")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="Container2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_52jq7")
flat = true
icon_alignment = 1

[node name="ContainerOptions" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ContainerOptions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.207843, 0.203922, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="ContainerOptions"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -427.0
offset_top = -104.0
offset_right = 1281.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)

[node name="Button" type="Button" parent="ContainerOptions/VBoxContainer2"]
layout_mode = 2
icon = ExtResource("8_5aoil")
flat = true
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerOptions"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ContainerOptions/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="ContainerOptions/VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0

[node name="Label2" type="Label" parent="ContainerOptions/VBoxContainer"]
layout_mode = 2
text = "Enemy Volume"
horizontal_alignment = 1

[node name="HSlider2" type="HSlider" parent="ContainerOptions/VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0

[node name="ContainerControls" type="NinePatchRect" parent="."]
visible = false
layout_mode = 2
offset_right = 854.0
offset_bottom = 480.0

[node name="ColorRect" type="ColorRect" parent="ContainerControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.207843, 0.203922, 1)

[node name="Label" type="Label" parent="ContainerControls"]
layout_mode = 2
offset_left = 630.0
offset_top = 160.0
offset_right = 854.0
offset_bottom = 240.0
text = "Trykk E for å interaktere"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ContainerControls"]
visible = false
layout_mode = 0
offset_left = 560.0
offset_top = 80.0
offset_right = 830.0
offset_bottom = 160.0
text = "Du interakterer nå!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ContainerControls"]
layout_mode = 0
offset_left = 260.0
offset_top = 20.0
offset_right = 490.0
offset_bottom = 80.0
text = "Prøve å bruk piltastene til å bevege deg"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="ContainerControls/VBoxContainer" instance=ExtResource("10_enfil")]
process_mode = 3
position = Vector2(200, 220)
scale = Vector2(2, 2)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="ContainerControls/VBoxContainer"]
position = Vector2(40, 200)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_d3rrq")

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="ContainerControls/VBoxContainer"]
position = Vector2(200, 360)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_10jfa")

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="ContainerControls/VBoxContainer"]
position = Vector2(360, 200)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_rsfdg")

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="ContainerControls/VBoxContainer"]
position = Vector2(200, 40)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_31by3")

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="ContainerControls/VBoxContainer"]
position = Vector2(600, 200)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_po1rq")

[node name="VBoxContainer2" type="VBoxContainer" parent="ContainerControls"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -427.0
offset_top = -104.0
offset_right = 1281.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)

[node name="Button" type="Button" parent="ContainerControls/VBoxContainer2"]
layout_mode = 2
icon = ExtResource("8_5aoil")
flat = true
icon_alignment = 1

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="." groups=["sound"]]
stream = ExtResource("9_lmiue")

[connection signal="pressed" from="Container/VBoxContainer/NewGame" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Continue" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Quit" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Container2/VBoxContainer/Continue" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Container2/VBoxContainer/Save" to="." method="_process"]
[connection signal="pressed" from="Container2/VBoxContainer/Save" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Container2/VBoxContainer/Load" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Container2/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Container2/VBoxContainer/Quit" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ContainerOptions/VBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="ContainerOptions/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="ContainerOptions/VBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="ContainerControls/VBoxContainer2/Button" to="." method="_on_button_pressed"]
